--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             <button id="plus-btn">+</button>
         </div>
     </div>
-    <script src="todo.js"></script>
+    <script src="dist/todo.js"></script>
 </body>
 </html>
